--- a/add-user.html
+++ b/add-user.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>User's List - Geneva Healthcare</title>
+    <title>Add User - Geneva Healthcare</title>
     <meta name="description" content="User's List - Geneva Healthcare">
     <meta name="keywords" content="User's List - Geneva Healthcare">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -23,15 +23,15 @@
 		<div class="add-user-info">
 			<div class="user-firstname">
 				<span>First Name</span>
-				<input type="text" placeholder="Rachel" />
+				<input type="text" placeholder="Enter First Name..." />
 			</div>
 			<div class="user-lastname">
 				<span>Last Name</span>
-				<input type="text" placeholder="Nearhood" />
+				<input type="text" placeholder="Enter Last Name..." />
 			</div>
 			<div class="user-email">
 				<span>Email Address</span>
-				<input type="text" placeholder="rachel@geneva.com" />
+				<input type="text" placeholder="Enter Email Address..." />
 			</div>
 			<div class="user-role">
 				<span>User Role</span>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="button">
 			<button class="cancel">Cancel</button>
-			<button class="save">Save Edits</button>
+			<button class="add">Add User</button>
 		</div>			
 	</div>
 </body>
