--- a/add-user.html
+++ b/add-user.html
@@ -9,8 +9,8 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Add User - Geneva Healthcare</title>
-    <meta name="description" content="User's List - Geneva Healthcare">
-    <meta name="keywords" content="User's List - Geneva Healthcare">
+    <meta name="description" content="Add User - Geneva Healthcare">
+    <meta name="keywords" content="Add User - Geneva Healthcare">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
