--- a/upload-interrogation.html
+++ b/upload-interrogation.html
@@ -26,7 +26,12 @@
 	<div id="content">
 		<h1>Sharp Coronado<span class="dropdown-arrow"></span></h1>
 		<button><span class="sprites_icon icon_add-user"></span>Add User</button>
-		<div class="tab">Users</div>
+		<ul class="tabs">
+			<li class="active">All POC</li>
+			<li class="">POC Inbox<span class="alert">3</span></li>
+			<li class="">All Remote</li>
+			<li class="">Remote Inbox<span class="alert">97</span></li>
+		</ul>
 		<div class="search show">
 			<form>
 				<div class="searchbox">
