--- a/users-list.html
+++ b/users-list.html
@@ -26,7 +26,9 @@
 	<div id="content">
 		<h1>Sharp Coronado<span class="dropdown-arrow"></span></h1>
 		<button><span class="sprites_icon icon_add-user"></span>Add User</button>
-		<div class="tab">Users</div>
+		<ul class="tabs">
+			<li class="active single">Users</li>
+		</ul>
 		<div class="search show">
 			<form>
 				<div class="searchbox">
