--- a/upload-interrogation.html
+++ b/upload-interrogation.html
@@ -25,14 +25,14 @@
 	</header>
 	<div id="content">
 		<h1>Sharp Coronado<span class="dropdown-arrow"></span></h1>
-		<button><span class="sprites_icon icon_add-user"></span>Add User</button>
+		<button><span class="sprites_icon icon_add-user"></span>Upload Interrogation</button>
 		<ul class="tabs">
 			<li class="active">All POC</li>
 			<li class="">POC Inbox<span class="alert">3</span></li>
 			<li class="">All Remote</li>
 			<li class="">Remote Inbox<span class="alert">97</span></li>
 		</ul>
-		<div class="search show">
+		<div class="search">
 			<form>
 				<div class="searchbox">
 					<input type="text" placeholder="Type any term(s) to search by..." />
@@ -72,105 +72,132 @@
 			</form>					
 		</div>
 		<div id="filelist">
-			<h3>1-13 of 256 Results...</h3>
+			<h3>1-13 of 11,146 Results...</h3>
 			<div class="document-row head">
-				<div class="row-date">Date Added<span class="dropdown-arrow"></span></div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Location(s)</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit"></div>
+				<div class="row-status">Status</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view"></div>
 			</div>		
-			<div class="document-row odd">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname selected">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
+			<div class="document-row odd unread marked">
+				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row even unread">
+				<div class="row-status">Unread</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row odd unread marked">
+				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row even unread">
+				<div class="row-status">Unread</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row odd unread marked">
+				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
 			</div>
 			<div class="document-row even">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname selected">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
 			</div>
 			<div class="document-row odd">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
 			</div>
 			<div class="document-row even">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username selected">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
-			</div>
-			<div class="document-row odd">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
-			</div>
-			<div class="document-row even">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
-			</div>
-			<div class="document-row odd">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
-			</div>
-			<div class="document-row even">
-				<div class="row-date">00/00/00</div>
-				<div class="row-lastname">Last Name</div>
-				<div class="row-firstname">First Name</div>
-				<div class="row-username">User Name</div>
-				<div class="row-email">Email</div>
-				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
-				<div class="row-active">Active</div>
-				<div class="row-edit">Edit</div>
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
 			</div>
 		</div>
 	</div>
