--- a/users-list.html
+++ b/users-list.html
@@ -77,7 +77,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Location(s)</div>
+				<div class="row-locations">Location(s)</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit"></div>
 			</div>		
@@ -88,7 +88,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -99,7 +99,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -110,7 +110,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -121,7 +121,7 @@
 				<div class="row-username selected">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -132,7 +132,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -143,7 +143,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -154,7 +154,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
@@ -165,7 +165,7 @@
 				<div class="row-username">User Name</div>
 				<div class="row-email">Email</div>
 				<div class="row-role">Role</div>
-				<div class="row-location">Sharp Coronado</div>
+				<div class="row-locations">Sharp Coronado</div>
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
