--- a/upload-interrogation.html
+++ b/upload-interrogation.html
@@ -101,8 +101,8 @@
 				<div class="row-mfr">MFR</div>
 				<div class="row-view">View</div>
 			</div>
-			<div class="document-row even unread">
-				<div class="row-status">Unread</div>
+			<div class="document-row even unread marked">
+				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
 				<div class="row-upload">Upload Date/Time</div>
 				<div class="row-location">Location</div>
 				<div class="row-time">Time Remaining</div>
@@ -143,8 +143,64 @@
 				<div class="row-mfr">MFR</div>
 				<div class="row-view">View</div>
 			</div>
-			<div class="document-row odd unread marked">
-				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+			<div class="document-row odd unread">
+				<div class="row-status">Unread</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row even">
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row odd">
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row even">
+				<div class="row-status">Read</div>
+				<div class="row-upload">Upload Date/Time</div>
+				<div class="row-location">Location</div>
+				<div class="row-time">Time Remaining</div>
+				<div class="row-patient-name">Patient Name</div>
+				<div class="row-dob">D.O.B.</div>
+				<div class="row-visit">Visit #</div>
+				<div class="row-device-type">Device Type</div>
+				<div class="row-model">Model</div>
+				<div class="row-serial">Serial #</div>
+				<div class="row-mfr">MFR</div>
+				<div class="row-view">View</div>
+			</div>
+			<div class="document-row odd">
+				<div class="row-status">Read</div>
 				<div class="row-upload">Upload Date/Time</div>
 				<div class="row-location">Location</div>
 				<div class="row-time">Time Remaining</div>
