--- a/upload-interrogation.html
+++ b/upload-interrogation.html
@@ -88,7 +88,7 @@
 				<div class="row-view"></div>
 			</div>		
 			<div class="document-row odd unread marked">
-				<div class="row-status">Unread<span class="exclamation-mark">!</span></div>
+				<div class="row-status">Unread<span class="exclamation"></span></div>
 				<div class="row-upload">Upload Date/Time</div>
 				<div class="row-location">Location</div>
 				<div class="row-time">Time Remaining</div>
@@ -102,7 +102,7 @@
 				<div class="row-view">View</div>
 			</div>
 			<div class="document-row even unread marked">
-				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+				<div class="row-status">Unread<span class="exclamation"></span></div>
 				<div class="row-upload">Upload Date/Time</div>
 				<div class="row-location">Location</div>
 				<div class="row-time">Time Remaining</div>
@@ -116,7 +116,7 @@
 				<div class="row-view">View</div>
 			</div>
 			<div class="document-row odd unread marked">
-				<div class="row-status">Unread<span class="exclamation-mark"></span></div>
+				<div class="row-status">Unread<span class="exclamation"></span></div>
 				<div class="row-upload">Upload Date/Time</div>
 				<div class="row-location">Location</div>
 				<div class="row-time">Time Remaining</div>
