--- a/concept-b.html
+++ b/concept-b.html
@@ -8,72 +8,76 @@
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>User's List - Geneva Healthcare</title>
-    <meta name="description" content="User's List - Geneva Healthcare">
-    <meta name="keywords" content="User's List - Geneva Healthcare">
+    <title>Concept B - Geneva Healthcare</title>
+    <meta name="description" content="Concept B - Geneva Healthcare">
+    <meta name="keywords" content="Concept B - Geneva Healthcare">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="script/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+    <script src="script/css3-mediaqueries.js"></script>
 </head>
 <body>
 	<header>
 		<a href="/"><img src="images/logo-geneva-healthcare.png" alt="Geneva Healthcare" width="174" height="47"></a>
 		<div class="links">
-			<div class="interrogations"><span class="alert">99+</span><span class="sprites_icon icon_interrogations"></span>Interrogations</div>
-			<div class="setting"><span class="alert">3</span><span class="sprites_icon icon_setting"></span></div>
-			<div class="user"><span class="sprites_icon icon_user"></span>Rachel558</div>
-		</div>		
+			<div class="setting"><span class="alert">120</span><span class="sprites_icon icon_setting"></span><span>Menu</span></div>
+			<div class="user"><span class="sprites_icon icon_user"></span><span class="username">Rachel558</span><span>(</span><span class="position">Geneva Admin</span><span>)</span></div>
+		</div>	
 	</header>
 	<div id="content">
-		<h1>Sharp Coronado<span class="dropdown-arrow"></span></h1>		
-		<div class="button-links add-user">
-			<button><span class="sprites_icon icon_add-user"></span>Add User</button>
+		<h1>Ackerman, Kendra</h1>
+		<h1 class="mri">Not Safe for MRI!</h1>
+		<h3>(Age 59)</h3>
+		<h3>ICD (Biotronik)</h3>
+		<div class="upload-status">
+			<div class="upload">
+				<span class="upload-title">Uploaded:</span>
+				<span class="upload-info">20-MAR-14, 22:10 (ED, Sharp Chula Vista)</span>
+			</div>
+			<div class="status">
+				<span class="status-title">Status:</span>
+				<span class="status-info">Preliminary</span>
+			</div>
+			<span class="dropdown-arrow"></span>
 		</div>
-		<ul class="tabs">
-			<li class="active">Users</li>
+		<div class="button-links">
+			<button>E-Sign</button>
+			<button>Report</button>
+			<button>MFR Data</button>
+		</div>
+		<ul class="tabs concept-b">
+			<li class="battery active">Battery Details</li>
+			<li class="lead">Lead Details</li>
+			<li class="event">Event Details <span>(3)</span></li>
+			<li class="device">Device Settings</li>
+			<li class="magent">Magent Mode  <span>(1)</span></li>
 		</ul>
-		<div class="search show">
-			<form>
-				<div class="searchbox">
-					<input type="text" placeholder="Type any term(s) to search by..." />
-					<span class="sprites_icon icon_search"></span>
+		<div class="details">
+			<div class="details-status">
+				<span>Battery Status:</span>
+				<span>Middle of Life</span>
+			</div>
+			<div class="details-list">
+				<div class="odd">
+					<span>Remaining Longevity</span>
+					<span>26 months</span>
 				</div>
-				<div class="advanced-search">
-					<div class="search-lastname">
-						<span>Last Name</span>
-						<input type="text" placeholder="Search by Last Name..." />
-					</div>
-					<div class="search-firstname">
-						<span>First Name</span>
-						<input type="text" placeholder="Search by First Name..." />						
-					</div>
-					<div class="search-email">
-						<span>Email</span>
-						<input type="text" placeholder="Search by Email..." />
-						<span class="dropdown-arrow"></span>
-					</div>
-					<div class="search-role search-focused">
-						<span>Role</span>
-						<input type="text" placeholder="Cardiologist" />
-						<span class="dropdown-arrow"></span>
-					</div>
-					<div class="search-date-added">
-						<span>Date Added</span>
-						<input type="text" placeholder="Search Date Range..." />
-						<span class="sprites_icon icon_date_range"></span>
-					</div>
-					<div class="search-user-status search-focused">
-						<span>User Status</span>
-						<input type="text" placeholder="Deleted" />
-						<span class="dropdown-arrow"></span>
-					</div>
+				<div class="even">
+					<span>Measured Voltage</span>
+					<span>XX V</span>
 				</div>
-				<a href="/">Show<br />Advanced</a>
-			</form>					
+				<div class="odd">
+					<span>Minimum Voltage</span>
+					<span>3.4 < 45 V</span>
+				</div>
+				<div class="even">
+					<span>Charge Time</span>
+					<span>9.7 sec</span>
+				</div>
+			</div>
 		</div>
-		<div id="filelist">
-			<h3>1-13 of 256 Results...</h3>
+		<!--<div id="filelist">
 			<div class="document-row head">
 				<div class="row-date">Date Added<span class="dropdown-arrow"></span></div>
 				<div class="row-lastname">Last Name</div>
@@ -173,11 +177,10 @@
 				<div class="row-active">Active</div>
 				<div class="row-edit">Edit</div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	<footer>
 		<span>&copy 2015 Geneva Healthcare</span>
-		<div class="loading"><span class="dot"></span></div>
 	</footer>
 </body>
 </html>
