--- a/upload-interrogation.html
+++ b/upload-interrogation.html
@@ -8,9 +8,9 @@
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>User's List - Geneva Healthcare</title>
-    <meta name="description" content="User's List - Geneva Healthcare">
-    <meta name="keywords" content="User's List - Geneva Healthcare">
+    <title>Upload Interrogation - Geneva Healthcare</title>
+    <meta name="description" content="Upload Interrogation - Geneva Healthcare">
+    <meta name="keywords" content="Upload Interrogation - Geneva Healthcare">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no" />
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -19,13 +19,17 @@
 <body>
 	<header>
 		<a href="/"><img src="images/logo-geneva-healthcare.png" alt="Geneva Healthcare" width="174" height="47"></a>
-		<div class="interrogations"><span class="alert">99+</span><span class="sprites_icon icon_interrogations"></span>Interrogations</div>
-		<div class="setting"><span class="alert">3</span><span class="sprites_icon icon_setting"></span></div>
-		<div class="user"><span class="sprites_icon icon_user"></span>Rachel558</div>
+		<div class="links">
+			<div class="interrogations"><span class="alert">99+</span><span class="sprites_icon icon_interrogations"></span>Interrogations</div>
+			<div class="setting"><span class="alert">3</span><span class="sprites_icon icon_setting"></span></div>
+			<div class="user"><span class="sprites_icon icon_user"></span>Rachel558</div>
+		</div>
 	</header>
 	<div id="content">
 		<h1>Sharp Coronado<span class="dropdown-arrow"></span></h1>
-		<button><span class="sprites_icon icon_add-user"></span>Upload Interrogation</button>
+		<div class="button-links add-user">
+			<button><span class="sprites_icon icon_add-user"></span>Upload Interrogation</button>
+		</div>		
 		<ul class="tabs">
 			<li class="active">All POC</li>
 			<li class="">POC Inbox<span class="alert">3</span></li>
